# juji

./: .gitignore  main.py  pyproject.toml
api/: __init__.py
auth/: __init__.py  auth.py
conf/: __init__.py
database/: __init__.py  base.py
juji-webapp/: package-lock.json  package.json  vite.config.ts
juji-webapp/src/: App.tsx  index.scss  main.tsx
juji-webapp/src/components/: UserInfo.tsx
mailer/: __init__.py
models/: base.py
oidc/: __init__.py
schemas/: __init__.py
settings/: __init__.py
template/: __init__.py
templates/: ac_pkce_grant_access.html  signup.html
